--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
   <dependencies>
     <!-- junit testing framework-->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.7.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -55,7 +55,7 @@
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>1.3.2</version>
-  </dependency>
+    </dependency>
   </dependencies>
 
   <build>
