--- a/src/main/resources/app.config
+++ b/src/main/resources/app.config
@@ -1,3 +1,3 @@
 server.port=5099
-policy.type=rbac
-policy.filename=access_policy_rbac.json
+policy.type=acl
+policy.filename=access_policy_acl.json
